--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <article class="border">
             logo
             </article>
-        <nav class="border menuprincipal">
+        <nav class="border menuprincipal a">
             <ul class="menu1">
                 <li class="item"></li>
                     <a href="registro.html" target="_blank">Inicio</a>
@@ -32,7 +32,7 @@
     </header>
     <br>
     <main class="main">
-        <section class="encabezados border">
+        <section class="encabezados border fondo">
             <h1>Encabezados</h1>
             <h2>Encabezados</h2>
             <h3>Encabezados</h3>
@@ -74,6 +74,25 @@
         </section>
     </main>
     <footer class="footer">
+        <section class="imagenes">
+            <h1>multimedia</h1>
+            <article>
+                <img class="tittle" src="imagenes/photo-1538127426967-75a6c73f6d20.jfif" alt="marca">
+            </article>
+            
+        </section>
+        <section class="video">
+                <iframe  class="maloh"  width="560" height="315" src="https://www.youtube.com/embed/x4D1L7jZ3u0?si=FVxNtLqPY7r6ORCS" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </section>
+        <section class="audio">
+            <audio src="song/#" controls></audio>
+
+        </section>
+        <section class="images">
+            <h1>bordes</h1>
+            <p class="border" >Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi recusandae porro aperiam consequatur facere rerum qui, perspiciatis at ex vitae.</p>
+            <p class="shadow" >Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi recusandae porro aperiam consequatur facere rerum qui, perspiciatis at ex vitae.</p>
+        </section>
         pie del documento
     </footer>
     
